# bot_real_estate

./: .gitignore  Real_estate_bot_states.py  bot_inst.py  bot_instance.py  configs.py  consts.py  db.py  filters.py  fsm.py  main.py  main_types.py  pyproject.toml  pyvenv.cfg  run_script.bat  utils.py
ai/: chatbot.py
bids_requests/: dialog.py  filters.py  functions.py
cost_comp_analysis/: dialog.py  filters.py  results.py  types.py
cost_comp_analysis/calculating/: comparative_analysis.py  comparative_histogram.py  cost_analysis.py  cost_comp_functions.py
datasets/: database.py  migration.py  regions.py  streetname.py  streets.py  user.py  userdata.py
realtor_fee_calculating/: dialog.py  fee_calc.py  fee_calc_functions.py  fee_filter.py  filters.py  functions.py
reminders/: __init__.py  newsletter.py
rental_profitable/: calc_rent.py  calc_rent_functions.py  dialog.py  filters.py  functions.py
utils/: data.py  middlewares.py  utils.py
